# pbrAudioShaders

./: CREDITS  README.md  __init__.py  version.txt
.github/: FUNDING.yml
docs/dsp_conf/: dummy.dsp  modalModel.lib  modal_dummy.dsp  simple.dsp
examples/: config.json  example_dsp_faust.py
examples/data/: impact.dsp  impact.py  modalModel_A.lib  test.dsp
examples/example_1/: config.json
examples/example_2/: config.json
examples/pyfaust/: CMakeLists.txt
examples/pyfaust/src/: faust_module.cpp
examples/pyfaust/tests/: test.py
src/: :wq  ACKNOWLEDGMENTS.md  CREDITS  README.md  modalModel.lib
src/ImpactShader/: .tmpCode.py.swp  __init__.py  tmpCode.py  tree.txt
src/ImpactShader/core/: acceleration_noise.py  contact_analyzer.py  contact_audio_generator.py  fast_acceleration_noise.py  impact_analyzer.py  impact_engine.py  impact_manager.py  mesh2modal.py  mesh_to_modal.py  modal_synth.py  optimize_obj.py  synth_writer.py
src/ImpactShader/lib/: impacts_data.py  trajectory_loader.py
src/ImpactShader/tools/: faust_render.py  pym2f.py
src/ImpactShader/utils/: config.py
src/cpp_src/: README.md  faust_render_snd.cpp
src/cpp_src/dsp-faust/: DspFaust.cpp  README.md
src/cpp_src/dsp_files/: brass.dsp  modalModel.lib  modalModel_A.lib  modalModel_B.lib  modal_dummy.dsp  stdfaust.lib  test.dsp
src/cpp_src/dsp_files/faustlib/: all.lib
src/dsp_faust/: README.md  dsp_faust.py  modal_synth.py  setup.py  tmpCtype.py
src/dsp_faust/dsp_files/: modalModel.lib  modalModel_B.lib  modal_dummy.dsp  osctest.dsp  simple_osc.dsp  test.dsp
src/dsp_faust/lib/: .gitignore
src/dsp_faust/src/: dsp_faust.cpp  faust_python_wrapper.cpp  faust_python_wrapper.h
src/dsp_faust/src/dsp-faust/: DspFaust.cpp  README.md  dummy-audio.h
src/ellipsoidalProxy/: .__init__.py.swp  __init__.py
src/ellipsoidalProxy/core/: __init__.py  modal4proxy.py  proxy_generator.py  proxy_mesh.py
src/ellipsoidalProxy/examples/: example.py
src/fractureSound/: __init__.py
src/fractureSound/core/: fracture_engine.py
src/fractureSound/examples/: example.py
src/fractureSound/lib/: fracture_data.py  fracture_modal.py  fracture_synth.py
src/objectDispersion/core/: object_dispersion.py  ray_dispersion.py
src/objectDispersion/lib/: dispersion_data.py  object_dispersion.py  ray_dispersion.py
src/old_git_faust/: CMakeLists.txt
src/physicsSolver/: __init__.py
src/physicsSolver/core/: .collision_solver.py.swp  .distance_solver.py.swp  .entity_manager.py.swp  .force_synth.py.swp  .physics_engine.py.swp  .rotation_solver.py.swp  collision_solver.py  distance_solver.py  distance_solver.py.dask  entity_manager.py  flight_path.py  force_solver.py  force_synth.py  normal_solver.py  physics_engine.py  position_solver.py  rotation_solver.py  vertex_solver.py
src/physicsSolver/lib/: .denoise_audio_forces.py.swp  .force_data.py.swp  .hertzian_contact.py.swp  .modal_vertices.py.swp  .trajectory_data.py.swp  acoustic_shader.py  audio_forces_denoiser.py  collision_data.py  collision_detection.py  contact_geometry.py  cubicspline_with_nan.py  denoise_audio_forces.py  filter.py  force_data.py  functions.py  hertzian_contact.py  interpolator.py  modal_vertices.py  score_data.py  trajectory_data.py
src/physicsSolver/utils/: .config.py.swp  config.py
src/pym2f/: impact_force_analyzer.py  pym2f.py
src/rigidBody/: .swp  README.md  __init__.py  ù
src/rigidBody/core/: .modal_composer.py.original.swp  .modal_player.py.swp  .rigidbody_engine.py.swp  __init__.py  collision_engine.py  collision_solver.py  distance_detector.py  distance_solver.py  entity_manager.py  flight_path.py  force_solver.py  force_synth.py  landmark_solver.py  mesh2modal.py  modal_composer.py  modal_luthier.py  modal_player.py  modal_player.py.original  modal_synth.py  position_solver.py  post_process_engine.py  prebaking.py  rigidbody_engine.py  rotation_solver.py  vertex_solver.py
src/rigidBody/lib/: .functions.py.swp  .rigidbody_synth.py.swp  acoustic_shader.py  approx2faust.py  collision_area.py  collision_data.py  connected_buffer.py  contact_classifier.py  contact_geometry.py  coupling_strenght.py  filter.py  force_data.py  functions.py  hertzian_contact.py  interpolator.py  modal_bank.py  modal_bank.py.jitfunc  modal_oscillator.py  modal_vertices.py  post_process.py  primitive_geometry.py  resonance_synth.py  rigidbody_synth.py  sample_counter.py  samples.py  score_data.py  shape_properties.py  trajectory_data.py
src/rigidBody/tools/: .pym2f.py.swp  faust_render.py  pym2f.py
src/rigidBody/utils/: config.py
src/src/cpp_src/: README.md
src/src/cpp_src/dsp_files/: simple_modal_test.dsp
src/src/cpp_src/dsp_files/faustlib/: demos.lib  effect.lib  filter.lib  music.lib  physmodels.lib  sf.lib  soundfiles.lib
src/src/ellipsoidalProxy/: ToDo.txt
src/src/ellipsoidalProxy/core/: __init__.py
src/src/fractureSound/lib/: fracture_data.py
src/src/physicsSolver/: README.md  __init__.py
src/src/physicsSolver/core/: flight_path.py  force_synth.py  normal_solver.py  physics_engine.py  vertex_solver.py
src/src/physicsSolver/lib/: collision_data.py  modal_vertices.py  score_data.py
src/src/physicsSolver/utils/: __init__.py
src/src/rigidBody/: __init__.py
src/src/rigidBody/core/: .modal_player.py.swp  mesh2modal.py  modal_composer.py  modal_luthier.py  modal_player.py
src/src/rigidBody/lib/: functions.py  modal_bank.py.jitclass  modal_bank.py.jitfunc  sample_counter.py
src/synthMasters/: __init__.py
src/synthMasters/SIMD/rigidBody/core/: modal_player.py
src/synthMasters/SIMD/rigidBody/lib/: connected_buffer.py  modal_bank.py  (+1 more)
src/synthMasters/core/: collision_solver.py  collision_solver.py.proxy_optimized  modal_composer.py  modal_luthier.py  modal_player.py  rigidbody_engine.py
src/synthMasters/lib/: .score_data.py.swp  connected_buffer.py  rigidbody_synth.py  score_data.py
tests/: dsp_faust.py
